<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@drawable/nav" />

    <View
        android:id="@+id/waveiew"
        android:layout_width="425dp"
        android:layout_height="97dp"
        android:background="@drawable/wave1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_marginTop="584dp"
        android:background="@drawable/roundbuttons"
        android:text="@string/editDetails"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="303dp"
        android:layout_height="41dp"
        android:background="@drawable/roundbuttons"
        android:text="@string/CloseRequest"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="372dp"
        android:layout_height="448dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="361dp"
            android:layout_height="37dp" />
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="22dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/Deadline"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="347dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/RequestedBy"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="295dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/Title"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="203dp"
        android:layout_marginRight="203dp"
        android:layout_marginBottom="247dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="Brief Description :-"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="78dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/Contact"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/status"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="402dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="30sp"
        android:text="@string/RequestId"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="113dp"
        android:ems="10"
        android:inputType="date"
        android:text="2020.08.13"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="155dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="My laptop Screen stopped working few days back, I thinkmy brother spilleed some water in the screen, Need a fix quick "
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="281dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Laptop Screen "
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="338dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Ichigo Kurasaki"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="401dp"
        android:text="RID8023"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="157dp"
        android:layout_height="46dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:inputType="phone"
        android:text="0753468906"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="381dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="phone"
        android:text="Pending Technician"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="326dp"
        android:layout_height="376dp"
        android:layout_marginBottom="524dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/newlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>